--- a/profile.css
+++ b/profile.css
@@ -6,6 +6,13 @@
 body{
     background-color: rgb(216, 228, 253);
 }
+.buttons a:link{
+    text-decoration: none;
+    overflow: hidden; 
+}
+.buttons span :is(a:link,a:visited,a:hover) {
+ color:white;
+}
 .navx{
     margin: 20px 20px;
     height:70px;
@@ -34,7 +41,7 @@ body{
 /* grid setting */
 .profile{
     display: grid;
-    grid-template-rows: 10rem 12rem 5rem 12rem 8rem ;
+    grid-template-rows: 10rem 12rem 5rem 15rem 3rem ;
     grid-template-columns: 5fr;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
 }
@@ -149,11 +156,10 @@ body{
     padding:25px;
     width:50%;
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 900px) {
     .profile {
         grid-template-rows: 6rem 2rem 15rem 10rem 22rem;
     }
-  
   .display-picture img{
     height:180px;
     width:160px;
